# parakeet-rs

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: from_cpp.rs  run.rs
src/: asr.rs  errors.rs  lib.rs  model.rs
