[package]
name = "parakeet-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
thiserror = "1.0"
anyhow = "1.0.98"
ort = { version = "2.0.0-rc.10" , features = ["coreml", "cuda", "directml", "tensorrt"]}

[dev-dependencies]
env_logger = "0.11.3"
hound = "3.5.1"
